[project]
name = "newrunner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "YohannPerron", email = "yohann.perron@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
runner = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
